//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  username String [not null]
  firstName String
  lastName String
  accounts Account [not null]
  categories Category [not null]
  role Role [not null]
}

Table Account {
  id String [pk]
  name String [not null]
  initialBalance Float [not null]
  currency String [not null]
  transactions Transaction [not null]
  transferTransactions Transaction [not null]
  templates Template [not null]
  user User [not null]
  userId String [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  icon String [not null]
  color String [not null]
  system Boolean [not null]
  user User [not null]
  parent Category
  children Category [not null]
  transactions Transaction [not null]
  templates Template [not null]
  userId String [not null]
  parentId String
}

Table Transaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  description String [not null]
  amount Float [not null]
  longitude Decimal [not null]
  latitude Decimal [not null]
  account Account [not null]
  transferAccount Account
  category Category
  categoryId String
  accountId String [not null]
  transferAccountId String
}

Table Template {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  description String [not null]
  amount Float [not null]
  longitude Decimal [not null]
  latitude Decimal [not null]
  account Account [not null]
  category Category [not null]
  categoryId String [not null]
  accountId String [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Account.userId > User.id

Ref: Category.userId > User.id

Ref: Category.parentId - Category.id

Ref: Transaction.accountId > Account.id [delete: Cascade]

Ref: Transaction.transferAccountId > Account.id [delete: Cascade]

Ref: Transaction.categoryId > Category.id [delete: Set Null]

Ref: Template.accountId > Account.id

Ref: Template.categoryId > Category.id